# HawkEye-TCI

./: .gitignore  CMakeLists.txt  README.md  build.sh  extractme.run  main.cpp
cmake/: ThermalCameraConfig.cmake.in  ThermalCameraConfigVersion.cmake.in
i3system/: i3Vendor.rules  post_extract.sh
i3system-sdk/: Readme  uninstall.sh
i3system-sdk/Documentation/: _example__a.html  _example__b.html  annotated.html  classes.html  classi3_1_1_t_e___a-members.html  classi3_1_1_t_e___a.html  classi3_1_1_t_e___b-members.html  classi3_1_1_t_e___b.html  files.html  functions.html  functions_func.html  functions_vars.html  i3__types_8h.html  i3__types_8h_source.html  i3system___t_e_8h.html  i3system___t_e_8h_source.html  i3system__imgproc_8h.html  i3system__imgproc_8h_source.html  index.html  license_3rd.html  menudata.js  pages.html  structi3_1_1_i_m_g_o_u_t_p_r_m_s-members.html  structi3_1_1_i_m_g_o_u_t_p_r_m_s.html  structi3_1_1_i_m_g_p_r_o_c_p_r_m_s-members.html  structi3_1_1_i_m_g_p_r_o_c_p_r_m_s.html  structi3_1_1_t_e___setting-members.html  structi3_1_1_t_e___setting.html  structi3_1_1_t_e_scan_data-members.html  structi3_1_1_t_e_scan_data.html  structi3_1_1_usb_state-members.html  structi3_1_1_usb_state.html
i3system-sdk/Documentation/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
i3system-sdk/SampleApp/: Main.cpp  Readme
i3system/include/: i3system_TE.h
i3system/lib/: libi3system_imgproc_impl_64.so.2.10.1  libi3system_te_64.so.2  libi3system_usb_64.so.2.10.1
include/: ThermalCamera.h
result/: libi3system_usb_64.so.2.10.1  thermal_test
src/: ThermalCamera.cpp
